--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,5 +7,5 @@
   {% endunless %}
   {{ current }}
   </section>
-  <section>Powered by <a href="//jekyllrb.com">Jekyll</a> | <a href="https://github.com/changeiot">Github</a></section>
+  <section>Powered by <a href="//jekyllrb.com">Jekyll</a> | <a href="https://github.com/zhangzhang-xiu">Github</a></section>
 </footer>
